<resources>
    <string name="app_name">Online Examination Project</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="admin_name">Name</string>
   <string name="confirm_email_address">Confirm Email Address</string>
    <string name="drawer_close">close</string>
    <string name="drawer_open">open</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="upload_to_server">Upload to Server</string>
    <string name="create_test">Create Test</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="choose_correct_option">Choose correct Option</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="registered_users">Registered Users</string>
    <string name="saved_quiz">Saved Quiz</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="change_username">Change Username</string>
    <string name="camera">camera</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_in_with_email_account">Sign in with Email Account</string>
    <string name="sign_in_with_google_account">Sign in with Google Account</string>
    <string name="registration_status_notRegistered">You are currently not registered for any quiz</string>
    <string name="registration_error_status">Check your Internet connection and try again</string>
    <string name="registration_status_registered">You are currently registered for an Online exam</string>
        <string name="register_for_quiz_btn">REGISTER</string>
    <string name="start_quiz_btn">START</string>
    <string name="login">Login</string>
    <string name="create_new">Create Account</string>
    <string name="title_activity_login">Login Activity</string>
   <string name="student_name">Name</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="admin_profile">Admin Profile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="Phone_number">Phone Number</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="activation_status">Activation Status:</string>
    <string name="registration_number">Registration Number:</string>
    <string name="quiz_score">Quiz Score:</string>
    <string name="registration_status">Registration Status:</string>
    <string name="phone_number">Phone number:</string>
    <string name="reg_number">Reg Number (optional)</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="reset_email">Reset Email</string>
    <string name="enter_your_profile_text">Enter your </string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="image">image</string>
    <string-array name="options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="notice_for_admin">
        Online examination app is designed separately for the admin (teacher) and the student.
        This app is for the admin and here, the admin can: \n
        View Register Students\n
        Create Test and upload saved quiz questions to server\n
        Unregister students \n
        Activate Students so as to take the quiz \n\n

        A students needs the Admin Id before he or she can register for an online examination.
        The Admin Id can be found in the navigation drawer, shared or copied to the students for them to register for an online examination.
        \n\n
        Note: \nPlease, do not use your login details in the online Examination students application.
    </string>


    <string name="notice">Notice</string>
    <string name="notice_for_student">
        Online examination app is designed separately for the admin (teacher) and the student.
        This app is for the student and here, you can: \n
        Check Registration Status\n
        Access Quiz if activated by the Admin\n
        View your Quiz Results immediately after taking quiz\n
        Save Multiple of your quiz scores to access them locally later \n\n

        You need an Admin Id before you can register for an online examination.
        So, you are meant to get the Admin ID from the admin so as to register for an online examination\n\n
        Note: \nPlease, do not use your login details in the online Examination students application.\n\n
        You can access quiz once and after which, you are deactivated (you cannot access quiz questions again) until the admin activates you again.\n\n
        You can only register for an online examination once at a time.
    </string>
    <string name="unregister_all_users">Unregister all Users</string>
    <string name="search_user">Search User</string>
    <string name="deactivate_users">Deactivate Users</string>
    <string name="activate_users">Activate Users</string>
    <string name="old_email">Old Email</string>
    <string name="password">password</string>
    <string name="new_email">New Email</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
</resources>