<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/activate_users"
        android:id="@+id/activate"
        app:showAsAction="never"/>

    <item
        android:title="@string/deactivate_users"
        android:id="@+id/deactivate"
        app:showAsAction="never"/>

    <item
        android:title="@string/refresh"
        android:id="@+id/refresh"
        app:showAsAction="never"/>

    <item
        android:title="@string/unregister_all_users"
        android:id="@+id/unregister_all"
        app:showAsAction="never"/>

    <item
        android:title="@string/search_user"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:id="@+id/search_user"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"/>
</menu>