<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RegisteredUsersDetailFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/big_image_width"
        android:layout_height="@dimen/big_image_width"
        android:layout_marginTop="@dimen/margin_32"
        app:civ_border_width="@dimen/border_width"
        app:civ_border_color="@color/white"
        android:contentDescription="@string/image"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/user_name"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_20"
        android:textStyle="bold|normal"
        android:textSize="@dimen/text_normal_size"
        android:textColor="@color/black"
        android:gravity="start"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/user_email"
        android:textStyle="bold|normal"
        android:textSize="@dimen/text_normal_size"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_20"
        android:textColor="@color/black"
        android:gravity="start"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/user_phoneNumber"
        android:textStyle="bold|normal"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_20"
        android:textSize="@dimen/text_normal_size"
        android:textColor="@color/black"
        android:gravity="start"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:text="@string/phone_number" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/registered"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_20"
        android:textStyle="bold|normal"
        android:textSize="@dimen/text_normal_size"
        android:textColor="@color/black"
        android:gravity="start"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:text="@string/registration_status" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/activation"
        android:textStyle="bold|normal"
        android:textSize="@dimen/text_normal_size"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_20"
        android:textColor="@color/black"
        android:gravity="start"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:text="@string/activation_status" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/reg_no"
        android:textStyle="bold|normal"
        android:textSize="@dimen/text_normal_size"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_20"
        android:textColor="@color/black"
        android:gravity="start"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:text="@string/registration_number" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/quiz_score"
        android:textStyle="bold|normal"
        android:textSize="@dimen/text_normal_size"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_20"
        android:textColor="@color/black"
        android:gravity="start"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:text="@string/quiz_score" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_gravity="center"
        android:visibility="gone"
        style="@style/SpinKitView.Large.RotatingCircle"
        android:id="@+id/progress_bar"/>

</LinearLayout>