<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/big_image_width"
        android:layout_height="@dimen/big_image_width"
        android:layout_marginTop="@dimen/margin_32"
        android:contentDescription="@string/image"
        android:src="@drawable/profile"
        app:civ_border_color="@color/white"
        app:civ_border_width="@dimen/border_width"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progress"
        style="@style/SpinKitView.Large.RotatingCircle"
        android:layout_width="@dimen/margin_20"
        android:layout_height="@dimen/margin_20"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        app:SpinKit_Color="@color/colorPrimary" />


    <ImageView
        android:id="@+id/image_chooser"
        android:layout_width="@dimen/margin_50"
        android:layout_height="@dimen/margin_50"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@drawable/round_blue_background"
        android:contentDescription="@string/camera"
        android:padding="@dimen/margin_10"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="@+id/profile_image" />

    <Button
        android:id="@+id/change_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_stylish_background"
        android:layout_margin="@dimen/margin_20"
        android:textSize="@dimen/text_normal_size"
        android:text="@string/change_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <Button
        android:id="@+id/change_email"
        android:layout_width="match_parent"
        android:background="@drawable/round_stylish_background"
        android:layout_height="wrap_content"
        android:text="@string/change_email"
        android:textSize="@dimen/text_normal_size"
        android:layout_margin="@dimen/margin_20"
        app:layout_constraintEnd_toEndOf="@+id/change_username"
        app:layout_constraintStart_toStartOf="@+id/change_username"
        app:layout_constraintTop_toBottomOf="@+id/change_username" />

</merge>