<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/enter_your_profile_text"
        android:textStyle="bold|normal"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_normal_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_height"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_top_24"
        android:layout_marginRight="@dimen/margin_10"
        android:inputType="textPersonName|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_56"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/cancel"
        android:textStyle="bold|normal"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_normal_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_64"
        android:text="@string/save"
        android:textStyle="bold|normal"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_normal_size"
        app:layout_constraintBottom_toBottomOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progress"
        style="@style/SpinKitView.Large.FadingCircle"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:visibility="gone"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"/>

</merge>