<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:Card_View="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_350"
            android:layout_margin="@dimen/margin_5"
            android:padding="@dimen/margin_10"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_5"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailError"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/corner_radius"
                    android:layout_width="match_parent"
                    app:boxBackgroundMode="outline"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="@dimen/margin_5"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passError"
                    android:layout_width="match_parent"
                    app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/corner_radius"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="outline"
                    android:layout_marginTop="@dimen/margin_5"
                    app:boxBackgroundColor="@color/white"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="@dimen/margin_5"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_50"
                    android:layout_margin="@dimen/text_normal_size"
                    android:background="@drawable/button_gradient"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>

                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/progress_bar"
                    style="@style/SpinKitView.Large.FadingCircle"
                    android:layout_width="@dimen/progress_bar_width"
                    android:layout_height="@dimen/progress_bar_height"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    app:SpinKit_Color="@color/colorPrimary" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:gravity="center"
                    android:text="@string/create_new"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_normal_size"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <ImageView
        android:id="@+id/profile"
        android:layout_width="@dimen/margin_100"
        android:layout_height="@dimen/margin_100"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        android:background="@drawable/round_background"
        android:padding="@dimen/margin_15"
        android:src="@drawable/profile"/>

</merge>